Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-7193

usbohci: assertion failure 'WorkItem->List.Flink == ((void *)0)' on boot

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • TRUNK
    • Drivers: USB
    • None
    • nForce2 chipset board
      r58488

    Description

      This happens with a USB mouse connected. Without the mouse, the system boots past this point.

      First stage is successful even with the mouse (hidparse lists some stuff etc). Second stage fails with this assertion.
      Issue is in the call to ExQueueWorkItem in OhciDefferedRoutine (usbohci/hardware.cpp:1529).
      There are two problems here:

      • the work item is already queued, as seen by the fact that its list item is valid
      • it is wrong to use ExQueueWorkItem for device-related tasks

      Attachments

        Activity

          People

            j_anderw Johannes Anderwald
            ThFabba ThFabba
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: