[USB] - Fix race condition for status change worker routine CORE-7193 #resolve - Tested by Thomas Faber (Blame him ;)

svn path=/trunk/; revision=59039